2013-07-31  Kan-Ru Chen  <kanru@kanru.info>

	* ibuf-ext.el (ibuffer-filter-by-filename):
	Make it work with dired buffers too.

2013-07-31  Dmitry Antipov <dmantipov@yandex.ru>

	* emacs-lisp/re-builder.el (reb-color-display-p):
	* files.el (save-buffers-kill-terminal):
	* net/browse-url.el (browse-url):
	* server.el (server-save-buffers-kill-terminal):
	* textmodes/reftex-toc.el (reftex-toc, reftex-toc-revert):
	Prefer nil to selected-frame for the first arg of frame-parameter.

2013-07-31  Xue Fuqiao  <xfq.free@gmail.com>

	* vc/vc-hooks.el (vc-menu-map): Add menu entry for vc-ignore.

2013-07-30  Stephen Berman  <stephen.berman@gmx.net>

	* minibuffer.el (completion--twq-all): Try and preserve each
	completion's case choice (bug#14907).

2013-07-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (open-network-stream): Mention the new
	:nogreeting parameter.
	(network-stream-open-starttls): Use the :nogreeting parameter
	(bug#14938).

	* net/shr.el (shr-mouse-browse-url): Remove and use `shr-browse-url'.

	* net/eww.el (eww-setup-buffer): Switching to the buffer seems
	more natural than popping.

	* net/shr.el (shr-urlify): Put `follow-link' on URLs (bug#14815).
	(shr-urlify): Highlight under mouse.

2013-07-30  Xue Fuqiao  <xfq.free@gmail.com>

	* vc/vc-hooks.el (vc-prefix-map): Add key binding for vc-ignore.

	* vc/vc-dir.el (vc-dir-mode-map): Change key binding for vc-dir-ignore.

	* vc/vc-svn.el (vc-svn-ignore): Remove `interactive'.  Use `*vc*'
	buffer for output.

	* vc/vc-hg.el (vc-hg-ignore): Remove `interactive'.  Do not assume
	point-min==1.  Fix search string.  Fix parentheses missing.

	* vc/vc-git.el (vc-git-ignore): Remove `interactive'. Do not
	assume point-min==1.  Fix search string.  Fix parentheses missing.

	* vc/vc-cvs.el (vc-cvs-ignore): Remove `interactive'.

	* vc/vc-bzr.el (vc-bzr-ignore): Remove `interactive'.  Use `*vc*'
	buffer for output.

2013-07-29  Eli Zaretskii  <eliz@gnu.org>
